# LLM

./: README.md
MyTransformers/: pyproject.toml
MyTransformers/layers/: FFN.py  decoder.py  embedding.py  encoder.py  feed_forward_network.py  layer_normalization.py  multihead_attention.py  positional_encoder.py  scaled_dot_product_attention.py
MyTransformers/model/: transformer.py
Tokenizers/: elyza_tokenizer.py  my_tokenizer.py  tohoku_tokenizer.py
Transformers/: transformer_encoder.py
