[project]
name = "mytransformers"
version = "0.1.0"
description = ""
authors = [
    {name = "yuki-1184",email = "yuki.1184apple@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==1.13.1)",
    "numpy (>=1.24.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
